--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,11 @@ android {
 
     defaultConfig {
         applicationId "com.applicationdevelopers.fitnessx"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,4 +42,14 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+
+
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+    implementation 'com.android.support:multidex:1.0.3' // use to handle android application
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+
+
 }
