--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitnessX">
-        <activity android:name=".Views.Home.HomeActivity"></activity>
+        <activity android:name=".Views.Tracker.ActivityTracker"></activity>
+        <activity android:name=".Views.NotificationActivity.NotificationActivity" />
+        <activity android:name=".Views.Home.HomeActivity" />
         <activity android:name=".Views.ProfileDetails.Welcome" />
         <activity android:name=".Views.SignUp.Login" />
         <activity android:name=".Views.ProfileDetails.GoalActivity" />
