--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.1'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:4.0.0'
+    implementation 'org.jetbrains:annotations:15.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
 
+    implementation 'com.google.firebase:firebase-bom:28.4.0'
 
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
     implementation 'com.android.support:multidex:1.0.3' // use to handle android application
@@ -58,6 +64,7 @@ dependencies {
     implementation 'com.robinhood.spark:spark:1.2.0'
 
 
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 
 }
