--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.applicationdevelopers.fitnessx">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,13 +13,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitnessX">
-        <activity android:name=".Views.Tracker.ActivityTracker"></activity>
-        <activity android:name=".Views.NotificationActivity.NotificationActivity" />
-        <activity android:name=".Views.Home.HomeActivity" />
-        <activity android:name=".Views.ProfileDetails.Welcome" />
-        <activity android:name=".Views.SignUp.Login" />
-        <activity android:name=".Views.ProfileDetails.GoalActivity" />
-        <activity android:name=".Views.ProfileDetails.CompleteProfile" />
+        <activity
+            android:name=".Views.Tracker.ActivityTracker"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Views.NotificationActivity.NotificationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Views.Home.HomeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Views.ProfileDetails.Welcome"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Views.SignUp.Login"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Views.ProfileDetails.GoalActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Views.ProfileDetails.CompleteProfile"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Views.SignUp.SignUp"
             android:screenOrientation="portrait" />
@@ -31,6 +49,12 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
+        <service
+            android:name=".Views.NotificationActivity.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
