--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,8 @@ dependencies {
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
+    implementation "com.airbnb.android:lottie:3.4.0"
+  //  implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
 
 }
