--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,20 @@
     package="com.applicationdevelopers.fitnessx">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitnessX">
+        <activity android:name=".Views.Tracker.Workouts.BackWorkout"></activity>
         <activity
             android:name=".Views.Tracker.ActivityTracker"
             android:screenOrientation="portrait" />
@@ -49,10 +54,15 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
+
         <service
-            android:name=".Views.NotificationActivity.MyFirebaseMessagingService">
+            android:name=".Services.NotificationBackgroundServices"
+            android:enabled="true"
+            android:exported="false"
+            android:process=":ServiceProcess" />
+        <service android:name=".Views.NotificationActivity.MyFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
